<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Are You Done Yet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="save">Save</string>
    <string name="note">Note:</string>
    <string name="title_activity_list_notes">Note Taker</string>
    <string name="add_note">Add Note</string>
    <string name="add_task">Add task</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirmMsg">Are you sure you want to delete this note? It can\'t be undone!</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="title_activity_log_in_page">LogInPage</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="title_activity_list_tasks">ListTasksActivity</string>
    <string name="title_menu">Main Menu</string>
    <string name="noteButton">Notes</string>
    <string name="taskButton">Tasks</string>
    <string name="timerButton">Timer</string>
    <string name="helpButton">Help</string>
    <string name="title_login">Login</string>
    <string name="usernameField"></string>
    <string name="passwordField"></string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="loginButton">Login</string>
    <string name="helpMenuField">blah blah blah this is where help instruction goes</string>
    <string name="title_activity_help_menu">HelpMenu</string>
    <string name="registerButton">Register</string>
    <string name="registerUsernameText">Enter a username</string>
    <string name="registerUsernameField"></string>
    <string name="registerFirstNameText">Enter your first name</string>
    <string name="registerLastNameText">Enter your last name</string>
    <string name="registerPasswordText1">Enter password</string>
    <string name="registerPasswordText2">Confirm password</string>
    <string name="registerEmailText">Enter your Email Address</string>
    <string name="registerFirstNameField"></string>
    <string name="registerLastNameField"></string>
    <string name="registerPasswordField1"></string>
    <string name="registerPasswordField2"></string>
    <string name="registerEmailField"></string>
    <string name="registerSubmitButton">Submit</string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="title_activity_timer">title_activity_timer</string>
    <string name="taskTitle">Task</string>
    <string name="alertBox">Check for Alert Notification</string>
    
    <string-array name="month_array">
        
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
        <string-array name="days_31_array">
      
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    
    </string-array>
    
         <string-array name="days_30_array">
      
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    
    </string-array>
    
          <string-array name="days_28_array">
      
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    
    </string-array>
    
        <string-array name="hour_array">
       
            	<item>01</item>
            	<item>02</item>
		        <item>03</item>
		        <item>04</item>
		        <item>05</item>
		        <item>06</item>
		        <item>07</item>
		        <item>08</item>
		        <item>09</item>
		        <item>10</item>
		        <item>11</item>
		        <item>12</item>
        </string-array>
        
        <string-array name="minute_array">
            
            	<item>:00</item>
            	<item>:01</item>
                <item>:02</item>
		        <item>:03</item>
		        <item>:04</item>
		        <item>:05</item>
		        <item>:06</item>
		        <item>:07</item>
		        <item>:08</item>
		        <item>:09</item>
		        <item>:10</item>
		        <item>:11</item>
		        <item>:12</item>
		        <item>:13</item>
		        <item>:14</item>
		        <item>:15</item>
		        <item>:16</item>
		        <item>:17</item>
		        <item>:18</item>
		        <item>:19</item>
		        <item>:20</item>
		        <item>:21</item>
		        <item>:22</item>
		        <item>:23</item>
		        <item>:24</item>
		        <item>:25</item>
		        <item>:26</item>
		        <item>:27</item>
		        <item>:28</item>
		        <item>:29</item>
		        <item>:30</item>
		        <item>:31</item>
		        <item>:32</item>
                <item>:33</item>
		        <item>:34</item>
		        <item>:35</item>
		        <item>:36</item>
		        <item>:37</item>
		        <item>:38</item>
		        <item>:39</item>
		        <item>:40</item>
		        <item>:41</item>
		        <item>:42</item>
		        <item>:43</item>
		        <item>:44</item>
		        <item>:45</item>
		        <item>:46</item>
		        <item>:47</item>
		        <item>:48</item>
		        <item>:49</item>
		        <item>:50</item>
		        <item>:51</item>
		        <item>:52</item>
		        <item>:53</item>
		        <item>:54</item>
		        <item>:55</item>
		        <item>:56</item>
		        <item>:57</item>
		        <item>:58</item>
		        <item>:59</item>
		        
		        
        </string-array>
        
        <string-array name="period_array">
           
            <item>AM</item>
            <item>PM</item>
        </string-array>
            <string name="deleteTaskButton">Delete Task</string>
            
</resources>
