<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/registerUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUsernameText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/registerUsernameField" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/registerFirstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerFirstNameText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerFirstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/registerFirstNameField" />

    <TextView
        android:id="@+id/registerLastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLastNameText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerLastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/registerLastNameField" />

    <TextView
        android:id="@+id/registerPasswordText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPasswordText1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerPasswordField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/registerPasswordField1" />

    <TextView
        android:id="@+id/registerPasswordText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerPasswordText2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerPasswordField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/registerPasswordField2" />

    <TextView
        android:id="@+id/registerEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerEmailText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerSubmitButton" />

</LinearLayout>
